# Conductor

./: .gitignore  Cargo.toml  README.md
.gitea/workflows/: build.yml
.github/workflows/: build.yml
agent/: Cargo.toml
agent/src/: main.rs
client/: README.md  pubspec.yaml
client/lib/: main.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Runner/: Info.plist
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
docs/: build.md  client-development-plan.md  client-platform-matrix.md  client.md  demo.md  deploy.md  job.md  plan.md  promts.md
scripts/: build-client.ps1  build-client.sh  build-linux-client-deb.sh  build-release.sh  check-macos-client-metadata.py  install-server.sh  smoke-agent-launch.ps1  smoke-client-launch.ps1  smoke-client-launch.sh  smoke-linux-client-e2e.sh  smoke-macos-client-e2e.sh  smoke-release.sh  smoke-web.mjs  smoke-windows-agent-e2e.ps1  smoke-windows-client-e2e.ps1  smoke-windows-client-flow.ps1  test-build-client-defaults.sh  test-client-archive-checksum.sh  test-client-evidence-summary.sh  test-linux-client-deb.sh  test-platform-smoke-evidence.sh  test-windows-build-client-defaults.ps1  test-windows-client-archive-checksum.ps1  test-windows-process-logging.ps1  test-windows-smoke-evidence.ps1  validate-client-evidence.sh  validate-linux-client.sh  validate-macos-client.sh  validate-windows-client.ps1  verify-client-archive.ps1  verify-client-archive.sh  verify-linux-smoke-evidence.sh  verify-macos-smoke-evidence.sh  verify-windows-smoke-evidence.ps1  windows-process-logging.ps1
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_one_open_session_per_device.sql  0003_device_display_code.sql
server/src/: main.rs
web/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: main.tsx  styles.css
