[package]
name = "conductor-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22"
chrono.workspace = true
directories = "5"
enigo = "0.6"
futures-util.workspace = true
hostname = "0.4"
local-ip-address = "0.6"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.30"
tokio.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"
uuid.workspace = true
webrtc = "0.8"
