[package]
name = "conductor-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
base64 = "0.22"
chrono.workspace = true
dashmap = "6"
futures-util.workspace = true
jsonwebtoken = "9"
mime_guess = "2"
rust-embed = "8"
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
